Purchases: fix another alignment issue (#48136)

--- a/client/me/purchases/style.scss
+++ b/client/me/purchases/style.scss
@@ -60,6 +60,7 @@
 
 		@include breakpoint-deprecated( '>960px' ) {
 			display: block;
+			margin-top: 0;
 		}
 	}
 }
